core/unpackaged/main/default/objects/Customer_Product_Mapping__c/Customer_Product_Mapping__c.object-meta.xml
<CustomObject>
    <description>Stores the cross-reference between a customer-defined part number and a PPI product SKU, scoped per Account. Supports portal self-service management, bulk CSV upload, asynchronous SKU validation, and admin-controlled cross-account copy.</description>
    <label>Customer Product Mapping</label>
    <nameField>
        <displayFormat>CPM-{000000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Product Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>