core/unpackaged/main/default/objects/Customer_Product_Mapping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Owning account. Drives data isolation: portal users only access mappings of their own account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Product Mappings</relationshipLabel>
    <relationshipName>Customer_Product_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>