core/unpackaged/main/default/objects/Customer_Product_Mapping__c/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <description>Customer-defined part number. Indexed via External ID for search translation performance. Uniqueness is enforced per account through Mapping_Composite_Key__c.</description>
    <externalId>true</externalId>
    <label>Customer Part Number</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>