core/unpackaged/main/default/objects/Customer_Product_Mapping__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the mapping is validated and usable across the storefront (search translation and display). Set to true exclusively by the validation Queueable when the SKU resolves to an active product.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>