core/unpackaged/main/default/objects/Customer_Product_Mapping__c/fields/Mapping_Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Composite_Key__c</fullName>
    <description>AccountId + '_' + Customer_Part_Number__c. Unique (case-insensitive) External ID used as the upsert key for CSV bulk upload and cross-account copy. Populated by the trigger handler in before insert; not user-editable.</description>
    <externalId>true</externalId>
    <label>Mapping Composite Key</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>