core/unpackaged/main/default/objects/Customer_Product_Mapping__c/fields/PPI_SKU_Input__c.field-meta.xml
<CustomField>
    <fullName>PPI_SKU_Input__c</fullName>
    <description>Raw SKU value entered by the user, always preserved as typed. Indexed via External ID. Validated asynchronously against Product2.StockKeepingUnit.</description>
    <externalId>true</externalId>
    <label>PPI SKU Input</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>