core/unpackaged/main/default/objects/Customer_Product_Mapping__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resolved PPI product. Populated exclusively by the asynchronous validation Queueable when the SKU input matches an active Product2.StockKeepingUnit. Never set directly by users.</description>
    <label>PPI Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Product Mappings</relationshipLabel>
    <relationshipName>Customer_Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>