core/unpackaged/main/default/objects/Customer_Product_Mapping__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Origin of the mapping record: created by a portal user, by an admin in Salesforce, or generated by the cross-account copy action.</description>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Copied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>